Added an S to HTTP Bootstrap link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdn.iconmonstr.com/1.2.0/css/iconmonstr-iconic-font.min.css">
 	  <link rel="stylesheet" type="text/css" href="portfoliostylesheet.css">
 
-	<link rel="stylesheet" type="text/css" href="http://bootswatch.com/simplex/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="https://bootswatch.com/simplex/bootstrap.min.css">
 	
 	<!-- Viewport -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
