--- a/portfoliobootstrap.html
+++ b/portfoliobootstrap.html
@@ -6,7 +6,7 @@
   <title>Portfolio | KRISTEN DE LA CERDA</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="portfoliostylesheet.css">
-  <link rel="stylesheet" type="text/css" href="http://bootswatch.com/simplex/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://bootswatch.com/simplex/bootstrap.min.css">
 
   <!-- Viewport - Takes away pinch function of phone users -->
 <!--   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
